retrieveNA31/objects/Core_IPS_Master_Issue_Category__c.object
<CustomObject>
    <description>Master list of Categories and Subcategories configured for IPS as a whole. Support Org Admins choose from this master list to configure Cat and Subcat values for their org. Changes to the Master List can be made via a governance process.</description>
    <fields>
        <fullName>Core_Description__c</fullName>
        <inlineHelpText>Free form description to describe the Category or Subcategory value.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_Master_Issue_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Case Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Core_IPS_Master_Issue_Category__c.Core_Type__c</field>
                <operation>equals</operation>
                <value>Case Category</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Core_IPS_Master_Issue_Category__c</referenceTo>
        <relationshipLabel>Master Case Categories</relationshipLabel>
        <relationshipName>Master_Issue_Sub_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Case Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Subcategory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Master Case Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Core_Type__c</columns>
        <columns>Core_Master_Issue_Category__c</columns>
        <columns>NAME</columns>
        <columns>Core_Description__c</columns>
        <columns>Core_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Category_Only</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Core_Status__c</columns>
        <columns>Core_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Core_Type__c</field>
            <operation>equals</operation>
            <value>Case Category</value>
        </filters>
        <label>Category Only</label>
    </listViews>
    <listViews>
        <fullName>Category_Subcategory</fullName>
        <columns>Core_Master_Issue_Category__c</columns>
        <columns>NAME</columns>
        <columns>Core_Status__c</columns>
        <columns>Core_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Category Subcategory</label>
    </listViews>
    <listViews>
        <fullName>SubCategory_Only</fullName>
        <columns>NAME</columns>
        <columns>Core_Status__c</columns>
        <columns>Core_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Core_Type__c</field>
            <operation>equals</operation>
            <value>Case Subcategory</value>
        </filters>
        <label>SubCategory Only</label>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Case Categories</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Core_IPS_Master_Case_Cat_Only_For_Subcat</fullName>
        <active>true</active>
        <description>When creating a new Master Case Category, a value is mandatory in the Master Case Category lookup when Type = Case Subcategory.</description>
        <errorConditionFormula>IF (
ISPICKVAL(  Core_Type__c , &quot;Case Subcategory&quot;),  ISBLANK( Core_Master_Issue_Category__c ) , FALSE

)</errorConditionFormula>
        <errorDisplayField>Core_Master_Issue_Category__c</errorDisplayField>
        <errorMessage>Subcategory must be linked to a Master Case Category.</errorMessage>
    </validationRules>
</CustomObject>